# FnordLauncher

./: .gitmodules  CMakeLists.txt  COPYING.md  DartConfiguration.tcl  FJORD_LAUNCHER_TESTING.md  LauncherScript  README.md  VALUES.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml  suggestion.yml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: backport.yml  blocked-prs.yml  build.yml  codeql.yml  flatpak.yml  nix.yml  release.yml  trigger_release.yml  update-flake.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
doc/: alternative-auth-servers.md
flatpak/: fnordlauncher  gg.arson.FnordLauncher.yml  org.unmojang.FjordLauncher.yml  org.unmojang.FnordLauncher.yml  xyz.fnordmc.FnordLauncher.yml
launcher/: Application.cpp  Application.h  CMakeLists.txt  GetAuthlibInjectorApiLocation.cpp  InstanceCopyTask.cpp  LaunchController.cpp  LaunchController.h  Manifest.cpp  Manifest.h  ResourceDownloadTask.cpp  VersionProxyModel.cpp  main.cpp
launcher/archive/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  ExportToZipTask.h
launcher/filelink/: FileLink.cpp
launcher/java/: JavaUtils.cpp
launcher/java/download/: ManifestDownloadTask.cpp
launcher/launch/: LaunchTask.cpp
launcher/minecraft/: MinecraftInstance.cpp  MinecraftInstance.h  PackProfile.cpp
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AuthFlow.cpp  AuthFlow.h  AuthSession.h  MinecraftAccount.cpp  MinecraftAccount.h  Parsers.cpp
launcher/minecraft/launch/: ExtractNatives.cpp  LauncherPartLaunch.cpp
launcher/minecraft/mod/: ResourceFolderModel.cpp
launcher/minecraft/skins/: AuthlibInjectorTextureDelete.cpp  AuthlibInjectorTextureDelete.h  AuthlibInjectorTextureUpload.cpp  AuthlibInjectorTextureUpload.h
launcher/minecraft/update/: AssetUpdateTask.cpp
launcher/modplatform/: EnsureMetadataTask.cpp  ResourceAPI.cpp
launcher/modplatform/atlauncher/: ATLPackInstallTask.cpp
launcher/modplatform/flame/: FileResolvingTask.cpp  FlameAPI.cpp  FlameCheckUpdate.cpp  FlameInstanceCreationTask.cpp  FlamePackExportTask.cpp
launcher/modplatform/import_ftb/: PackInstallTask.cpp
launcher/modplatform/legacy_ftb/: PackFetchTask.cpp
launcher/modplatform/modpacksch/: FTBPackInstallTask.cpp  FTBPackManifest.cpp
launcher/modplatform/modrinth/: ModrinthAPI.cpp  ModrinthAPI.h  ModrinthCheckUpdate.cpp
launcher/modplatform/technic/: SolderPackInstallTask.cpp
launcher/net/: NetRequest.h
launcher/resources/documents/: credits.html
launcher/screenshots/: ImgurAlbumCreation.cpp
launcher/tools/: GenericProfiler.cpp
launcher/ui/: GuiUtil.cpp  GuiUtil.h  InstanceWindow.cpp  MainWindow.cpp  MainWindow.ui
launcher/ui/dialogs/: AboutDialog.cpp  AuthlibInjectorLoginDialog.cpp  AuthlibInjectorLoginDialog.ui  IconPickerDialog.cpp  InstallLoaderDialog.cpp  MSALoginDialog.cpp  MSALoginDialog.ui  NewInstanceDialog.cpp  ResourceDownloadDialog.cpp  ResourceUpdateDialog.cpp
launcher/ui/instanceview/: InstanceView.cpp
launcher/ui/java/: InstallJavaDialog.cpp
launcher/updater/: PrismExternalUpdater.cpp
libraries/launcher/: CMakeLists.txt
nix/: README.md  unwrapped.nix  wrapper.nix
program_info/: CMakeLists.txt  fjordlauncher.qrc.in  fjordlauncher.rc.in  fnordlauncher.6.scd  fnordlauncher.icns  fnordlauncher.manifest.in  fnordlauncher.qrc  fnordlauncher.rc.in  genicons.fnord.sh  gg.arson.FnordLauncher.desktop.in  gg.arson.FnordLauncher.metainfo.xml.in  org.unmojang.FnordLauncher.desktop.in  org.unmojang.FnordLauncher.metainfo.xml.in  prismlauncher.qrc.in  win_install.nsi  xyz.fnordmc.FnordLauncher.metainfo.xml.in
program_info/FjordLauncher.icon/: icon.json
program_info/FnordLauncher.icon/: icon.json
tests/: CMakeLists.txt
(+46 files in other folders)
